adds nsl_linker property for new-tree

--- a/playbooks/roles/deploy-war/templates/editor-config.rb.j2
+++ b/playbooks/roles/deploy-war/templates/editor-config.rb.j2
@@ -2,6 +2,7 @@
 Rails.configuration.services_clientside_root_url = "{{Rails.configuration.services_clientside_root_url}}"
 Rails.configuration.nsl_services = "{{Rails.configuration.nsl_services}}"
 Rails.configuration.nsl_links = "{{Rails.configuration.nsl_links}}"
+Rails.configuration.nsl_linker = "{{Rails.configuration.nsl_linker}}"
 
 Rails.configuration.services = "{{Rails.configuration.services}}"
 Rails.configuration.name_services = "{{Rails.configuration.name_services}}"
